--- a/HelloWorldApp.csproj
+++ b/HelloWorldApp.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -7,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ApiToolkit.Net" Version="1.0.4" />
-    <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.12.0" />
-    <PackageReference Include="Google.Protobuf" Version="3.26.1" />
+    <PackageReference Include="ApiToolkit.Net" Version="2.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="OpenTelemetry" Version="1.11.0" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.0" />
     <PackageReference Include="NUnit" Version="4.1.0" />
   </ItemGroup>
 
